fix: correct z-index in burger and nav

--- a/src/components/Burger/Burger.scss
+++ b/src/components/Burger/Burger.scss
@@ -5,7 +5,7 @@
   position: relative;
   width: 20px;
   height: 20px;
-  z-index: 2;
+  z-index: 10;
   background-color: inherit;
 
   &__line-1,
